<resources>
    <string name="app_name">Your Rewards List</string>
    <string name="task_name">Task name:</string>
    <string name="task_description">Task description:</string>
    <string name="new_task">New task:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="checkbox">CheckBox</string>
    <string name="place_holder">Place Holder</string>
    <string name="select_time">Select time</string>
    <string name="your_score">Your score:</string>
    <string name="score">Score</string>
    <string name="your_current_score">Your current score:</string>
    <string name="enter_points">Enter Points</string>
    <string name="use_points">Use points</string>
    <string name="you_can_use_your_points">You can use your points:</string>
    <string name="how_much_points">How much points you want to use?</string>
    <string name="points">Points</string>
    <string name="your_toast_message_here">Your toast message here</string>
    <string name="not_enough_points">You don\'t have enough points available!</string>
    <string name="pending">pending</string>
</resources>