<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ScoreFragment">

    <TextView
        android:id="@+id/taskTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/your_current_score"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scoreValue"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/place_holder" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_can_use_your_points"
            android:textSize="18sp" />

        <!-- Horizontal container for the input field and button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Input Field -->
            <EditText
                android:id="@+id/inputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="number"
                android:hint="@string/enter_points"
                android:inputType="number" />

            <!-- Button -->
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/usePointsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_primary"
                android:padding="5dp"
                android:text="@string/use_points"
                android:textColor="@color/design_default_color_on_primary"
                app:icon="@drawable/baseline_remove_24"
                app:iconTint="#FFE855" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
