<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreOnMainPage"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:text="@string/your_score" />

        <TextView
            android:id="@+id/scoreValueOnMainPage"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:text="@string/place_holder" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/usePointsButton"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:padding="5dp"
            android:text="@string/use_points"
            android:textColor="@color/design_default_color_on_primary"
            app:icon="@drawable/baseline_remove_24"
            app:iconTint="#FFE855" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/design_default_color_background" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="5dp"
        android:text="@string/new_task"
        android:textColor="@color/design_default_color_on_primary"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="#FFE855" />

</RelativeLayout>